<resources>
    <string name="app_name">ChaChing</string>
    <string name="product_id">Product ID</string>
    <string name="not_assigned">Not assigned</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add_string">Add</string>
    <string name="find_string">Find</string>
    <string name="delete_string">Delete</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Search</string>
    <string name="menu_slideshow">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="display">Display</string>
    <string name="profile_header_desc">Profile header</string>
    <string name="search_hint">Search by name</string>
    <string name="search">Search</string>
</resources>