<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/black"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_id"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contactID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_assigned"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact Name"
                android:textSize="18sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/cardName"
                android:layout_width="97dp"
                android:layout_height="68dp"
                android:ems="10"
                android:hint="Card Name"
                android:inputType="none"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/expiration"
                android:layout_width="92dp"
                android:layout_height="68dp"
                android:ems="10"
                android:hint="MM-YYYY"
                android:inputType="none"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/perk"
                android:layout_width="70dp"
                android:layout_height="68dp"
                android:ems="10"
                android:hint="Perk (%,Pts,Miles)"
                android:inputType="none"
                android:textAlignment="center"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center">

            <EditText
                android:id="@+id/useCategory"
                android:layout_width="133dp"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="Reward Type"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/cardBrand"
                android:layout_width="144dp"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="Card Brand"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Card Brand"
                android:textSize="18sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/fee"
                android:layout_width="112dp"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="Annual Fee"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="18sp" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_string" />

        <Button
            android:id="@+id/findButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/find_string"
            android:visibility="gone"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foregroundTint="@color/black"
            android:text="@string/delete_string"
            android:visibility="gone" />

        <Button
            android:id="@+id/ascButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foregroundTint="@color/black"
            android:text="ASC"
            android:visibility="gone" />

        <Button
            android:id="@+id/descButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foregroundTint="@color/black"
            android:text="DESC"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/switchFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="switch fragment"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contact_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>